fixed profile pic address

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <!-- <img src="images\DKO0NGAS_400x400.jpg" alt="square iamge"> -->
-    <img src="images\croppedimage.png" alt="cropped circular image">
+    <img src="croppedimage.png" alt="cropped circular image">
     <h1>Christopher Malapati</h1>
     <p><em>This is the praragraph text that is written by <strong>Christopher Malapati</strong> while learning HTML on Udemy.</em></p>
     <p>This is another  paragraph that is added as a paragraph in order to add some omore text and thhis is how it lloksd and this is what I was rying to do all the time and now and thenm.</p>
